
[package]
name = "rust_glam_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# glam is a linear algebra library that provides the Vec2 type
device_query = "2.0.0"
glam = "0.29"
minifb = "0.28.0"
trig = "0.4.0"